@@ -1,3 +1,7 @@
+2011-11-11 mmichaud <michael.michaud@free.fr>
+    * PersistentBlackboard now uses UTF-8 instead of local charset to read/write
+      into the utf-8 workbench-state.xml file.
+    
 2011-11-09 mmichaud <michael.michaud@free.fr>
     Changes from discussion held on 2011-11-04 and 2011-11-05
     * Move jpg images from com.vividsolutions.workbench.ui.images directory used
